--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -3,3 +3,16 @@
     height: 400px;
   }
 }
+
+.steps {
+  li {
+    margin-top: 2em;
+  }
+}
+
+// fix highlightjs issue
+pre pre {
+  border: none;
+  padding: 0;
+  margin: 0;
+}
