--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,11 @@
 .home .angular-google-map-container {
   height: 400px;
 }
+.steps li {
+  margin-top: 2em;
+}
+pre pre {
+  border: none;
+  padding: 0;
+  margin: 0;
+}
